Add tag helpers for views index, update and addregulations.cshtml

--- a/Views/Regulations/AddRegulation.cshtml
+++ b/Views/Regulations/AddRegulation.cshtml
@@ -13,27 +13,27 @@
     
     <div>
         <h3>Добавление записей в БД.</h3>
-        <form method="POST">
-            <input type="hidden" value="@Model.Id" name="Id"/>
-            <input type="hidden" value="@Model.Added" name="Added"/>
+        <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
+            <input type="hidden" asp-for="Id" value="@Model.Id" />
+            <input type="hidden" asp-for="Added" value="@DateTime.Now" />
             <table>
                 <tr>
                     <td>Краткое наименование нормативной документации</td>
-                    <td><input type="text" name = "ShortName"/></td>
+                    <td><input type="text" asp-for="ShortName" placeholder="Например, шифр..." /></td>
                 </tr>
                 <tr>
                     <td>Полное наименование нормативной документации</td>
-                    <td><input type="text" name = "FullName"/></td>
-                </tr>                
+                    <td><input type="text" asp-for="FullName" placeholder="Подробнее..." /></td>
+                </tr>
                 <tr>
                     <td>Введите ссылку на документацию</td>
-                    <td><input type="text" name = "Link"/></td>
-                </tr>                
+                    <td><input type="text" asp-for="Link" placeholder="Url-адрес..." /></td>
+                </tr>
                 <tr>
                     <td>Ваш Id:</td>
-                    <td><input type="text" name = "UserId"/></td>
-                </tr>  
-                <tr><td><input type="submit" value="Отправить"></td><td></td></tr>              
+                    <td><input type="text" asp-for="UserId" placeholder="Ваш Id..." /></td>
+                </tr>
+                <tr><td><input type="submit" value="Отправить изменения" /></td><td></td></tr>
             </table>
         </form>
     </div>
