Add validation for Regulation model + styles

--- a/Views/Regulations/AddRegulation.cshtml
+++ b/Views/Regulations/AddRegulation.cshtml
@@ -8,6 +8,11 @@
 <html>
 <head>
     <title>Regulation Edition Page</title>
+    <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery/dist/jquery.min.js"></script><!--подключение jquery-->
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    
 </head>
 <body>
     
@@ -19,19 +24,23 @@
             <table>
                 <tr>
                     <td>Краткое наименование нормативной документации</td>
-                    <td><input type="text" asp-for="ShortName" placeholder="Например, шифр..." /></td>
+                    <td><input type="text" asp-for="ShortName" value="@Model.ShortName" /></td>
+                    <td><span asp-validation-for="ShortName"></span></td>
                 </tr>
                 <tr>
                     <td>Полное наименование нормативной документации</td>
-                    <td><input type="text" asp-for="FullName" placeholder="Подробнее..." /></td>
+                    <td><input type="text" asp-for="FullName" value="@Model.FullName" /></td>
+                    <td><span asp-validation-for="FullName"></span></td>
                 </tr>
                 <tr>
                     <td>Введите ссылку на документацию</td>
-                    <td><input type="text" asp-for="Link" placeholder="Url-адрес..." /></td>
+                    <td><input type="text" asp-for="Link" value="@Model.Link" /></td>
+                    <td><span asp-validation-for="Link"></span></td>
                 </tr>
                 <tr>
                     <td>Ваш Id:</td>
-                    <td><input type="text" asp-for="UserId" placeholder="Ваш Id..." /></td>
+                    <td><input type="number" asp-for="UserId" /></td>
+                    <td><span asp-validation-for="UserId"></span></td>
                 </tr>
                 <tr><td><input type="submit" value="Отправить изменения" /></td><td></td></tr>
             </table>
