--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
     <tr>
         <td>@reg.ShortName</td>
         <td>@reg.Added</td>
+        <td><a href="@reg.Link">@reg.ShortName at cntd.com</a></td>
         <td><a asp-action="UpdateRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">Изменение записи</a></td>
         <td><a asp-action="DeleteRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">Удаление записи</a></td>
         <td></td>
@@ -29,6 +30,7 @@
         }
     <tr>
         <td></td>        
+        <td></td>
         <td></td>
         <td></td>
         <td><a href="~/Regulations/AddRegulation/" name="AddRegLink" type="text/html">Добавление новых записей</a></td>
