--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,12 +7,14 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
     <title>Login</title>
 </head>
 <body>
     <h2>Страница входа на сайт</h2>
 
-    <a asp-action="Login" asp-controller="Account">Регистрация</a>
+    <a asp-action="Register" asp-controller="Account">Регистрация</a>
     <form asp-action="Login" asp-controller="Account" method="post" asp-antiforgery="true
           ">
         <div class="validation" asp-validation-summary="ModelOnly"></div>
