--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -7,14 +7,15 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
     <title>Login</title>
 </head>
 <body>
-    <h2>Страница входа на сайт</h2>
+    <h2>Страница регистрации учетных записей</h2>
 
-    <a asp-action="Login" asp-controller="Account">Регистрация</a>
-    <form asp-action="Login" asp-controller="Account" method="post" asp-antiforgery="true
-          ">
+    
+    <form asp-action="Register" asp-controller="Account" method="post" asp-antiforgery="true" >
         <div class="validation" asp-validation-summary="ModelOnly"></div>
         <div>
             <div class="form-group">
