--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -34,7 +34,7 @@
                 <span asp-validation-for="ConfirmPassword"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Войти" class="btn btn-outline-dark" />
+                <input type="submit" value="Регистрация" class="btn btn-outline-dark" />
             </div>
         </div>
     </form>
