--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
         <div>
             <div class="form-group">
                 <label asp-for="Email">Введите Ваш E-mail</label>
-                <input type="email" asp-for="Email" />
+                <input type="text" asp-for="Email" />
                 <span asp-validation-for="Email"></span>
             </div>
             <div class="form-group">
