Add error 403 Redirection

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -12,6 +12,7 @@
     <title>Login</title>
 </head>
 <body>
+    <input type="submit" value="Выйти из текущего профиля" asp-action="Logout">
     <h2>Страница входа на сайт</h2>
 
     <a asp-action="Register" asp-controller="Account">Регистрация</a>
