--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="Password"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword">Введите Ваш пароль</label>
+                <label asp-for="ConfirmPassword">Подтвердите пароль</label>
                 <input type="password" asp-for="ConfirmPassword" />
                 <span asp-validation-for="ConfirmPassword"></span>
             </div>
