--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -93,3 +93,11 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
   display: none;
 }
+
+.img403 {
+  display: flex;
+  position: absolute;
+  align-items: center;  
+  border: 3px solid;
+  border-color: #9a09ee;
+}
