--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -12,8 +12,8 @@
     <title>Login</title>
 </head>
 <body>
-    
-    <form action="get" >
+
+    <form action="get">
         <button class="btn-danger" type="submit" asp-action="Logout" asp-controller="Account">Выйти</button>
     </form>
 
@@ -39,6 +39,17 @@
             </div>
         </div>
     </form>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"
+            asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator">
+    </script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.10/jquery.validate.unobtrusive.min.js"
+            asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive">
+    </script>
 </body>
 </html>
 
