Add Layout pages. Use Layout pages.

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,17 +1,9 @@
 ﻿@model Regulations.Models.ViewModels.RegisterViewModel
-@{    
-    Layout = null;
+@{
+    ViewData["Title"] = "Регистрация";
+    Layout = "_ValidationRegLayout";
 }
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <title>Login</title>
-</head>
-<body>
     <h2>Страница регистрации учетных записей</h2>
 
 
@@ -38,17 +30,4 @@
             </div>
         </div>
     </form>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"
-            asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
-            asp-fallback-test="window.jQuery && window.jQuery.validator">
-    </script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.10/jquery.validate.unobtrusive.min.js"
-            asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
-            asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive">
-    </script>
-</body>
-</html>
-
+   
