--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,17 +1,9 @@
 ﻿@model Regulations.Models.ViewModels.LoginViewModel
 @{
-    Layout = null;
+    ViewData["Title"] = "Вход";
+    Layout = "_ValidationRegLayout";
 }
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <title>Login</title>
-</head>
-<body>
 
     <form action="get">
         <button class="btn-danger" type="submit" asp-action="Logout" asp-controller="Account">Выйти</button>
@@ -39,17 +31,4 @@
             </div>
         </div>
     </form>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"
-            asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
-            asp-fallback-test="window.jQuery && window.jQuery.validator">
-    </script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.10/jquery.validate.unobtrusive.min.js"
-            asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
-            asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive">
-    </script>
-</body>
-</html>
-
+    
