--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,43 +1,40 @@
 ﻿@Model IEnumerable<Regulations.Models.Regulation>
-@{
-    //ViewData["Title"] = "Список нормативной документации";
-    Layout = null;
-}
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>СП</title>
-</head>
-<body>
-    <h3>Нормы</h3>
-    <table>
-        <tr>
-            <td>Название</td>
-            <td>Дата</td>
-        </tr>
-        @foreach (var reg in Model)
-        {
+    @{
+        ViewData["Title"] = "Список нормативной документации";
+        Layout = "_Layout";
+    }
+    
+        <h3>Список нормативной документации</h3>
+        <table>
             <tr>
-                <td>@reg.ShortName</td>
-                <td>@reg.Added</td>
-                <td><a href="@reg.Link">Ссылка</a></td>
-                <td><a asp-action="UpdateRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">Изменение записи</a></td>
-                <td><a asp-action="DeleteRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">Удаление записи</a></td>
-                <td></td>
-
+                <td>
+                    <form action="get">
+                        <button class="btn-danger" type="submit" asp-action="Logout" asp-controller="Account">Выйти</button>
+                    </form>
+                </td>
+                
             </tr>
-        }
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td><a href="~/Regulations/AddRegulation/" name="AddRegLink" type="text/html">Добавление новых записей</a></td>
-        </tr>
-    </table>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-</body>
-</html>
+            <tr>
+                <td>Название</td>
+                <td>Дата</td>
+            </tr>
+            @foreach (var reg in Model)
+            {
+                <tr>
+                    <td>@reg.ShortName</td>
+                    <td>@reg.Added</td>
+                    <td><a href="@reg.Link">Ссылка</a></td>
+                    <td><a asp-action="UpdateRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">Изменение записи</a></td>
+                    <td><a asp-action="DeleteRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">Удаление записи</a></td>
+                    <td></td>
+                </tr>
+            }
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><a href="~/Regulations/AddRegulation/" name="AddRegLink" type="text/html">Добавление новых записей</a></td>
+            </tr>
+        </table>
+        
