Add localizer injection to views

--- a/Views/Account/AccessDenied.cshtml
+++ b/Views/Account/AccessDenied.cshtml
@@ -2,6 +2,8 @@
 @{    
     Layout = null;
 }
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer localizer;
 <!DOCTYPE html>
 
 <html>
