--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Вход";
     Layout = "_ValidationRegLayout";
 }
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer localizer;
 
 
     <form action="get">
