--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Регистрация";
     Layout = "_ValidationRegLayout";
 }
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer localizer;
 
     <h2>Страница регистрации учетных записей</h2>
 
