--- a/Views/Regulations/AddRegulation.cshtml
+++ b/Views/Regulations/AddRegulation.cshtml
@@ -2,44 +2,46 @@
 @using Microsoft.AspNetCore.Mvc
 @using Microsoft.AspNetCore.Authorization
 {
-    
+
 }
 @{
     ViewData["Title"] = "Добавление записи";
     Layout = "_ValidationRegLayout";
 }
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer localizer;
 
 
-    <div>
-        <span>@User.Identity.Name</span>
-        <h3>Добавление записей в БД.</h3>
-        <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
-            <input type="hidden" asp-for="Id" value="@Model.Id" />
-            <input type="hidden" asp-for="Added" value="@DateTime.Now" />
-            <input type="hidden" asp-for="User.Email" value="@User.Identity.Name" />
-            
-            <table>
-                <tr>
-                    <td>Краткое наименование нормативной документации</td>
-                    <td><input type="text" asp-for="ShortName" value="@Model.ShortName" /></td>
-                    <td><span asp-validation-for="ShortName"></span></td>
-                </tr>
-                <tr>
-                    <td>Полное наименование нормативной документации</td>
-                    <td><input type="text" asp-for="FullName" value="@Model.FullName" /></td>
-                    <td><span asp-validation-for="FullName"></span></td>
-                </tr>
-                <tr>
-                    <td>Введите ссылку на документацию</td>
-                    <td><input type="text" asp-for="Link" value="@Model.Link" /></td>
-                    <td><span asp-validation-for="Link"></span></td>
-                </tr>
-                <tr>
-                    <td>Ваш Id:</td>
-                    <td><input type="number" asp-for="UserId" /></td>
-                    <td><span asp-validation-for="UserId" value=""></span></td>
-                </tr>
-                <tr><td><input type="submit" value="Отправить изменения" /></td><td></td></tr>
-            </table>
-        </form>
-    </div>
+<div>
+    <span>@User.Identity.Name</span>
+    <h3>Добавление записей в БД.</h3>
+    <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
+        <input type="hidden" asp-for="Added" value="@DateTime.Now" />
+        <input type="hidden" asp-for="User.Email" value="@User.Identity.Name" />
+
+        <table>
+            <tr>
+                <td>Краткое наименование нормативной документации</td>
+                <td><input type="text" asp-for="ShortName" value="@Model.ShortName" /></td>
+                <td><span asp-validation-for="ShortName"></span></td>
+            </tr>
+            <tr>
+                <td>Полное наименование нормативной документации</td>
+                <td><input type="text" asp-for="FullName" value="@Model.FullName" /></td>
+                <td><span asp-validation-for="FullName"></span></td>
+            </tr>
+            <tr>
+                <td>Введите ссылку на документацию</td>
+                <td><input type="text" asp-for="Link" value="@Model.Link" /></td>
+                <td><span asp-validation-for="Link"></span></td>
+            </tr>
+            <tr>
+                <td>Ваш Id:</td>
+                <td><input type="number" asp-for="UserId" /></td>
+                <td><span asp-validation-for="UserId" value=""></span></td>
+            </tr>
+            <tr><td><input type="submit" value="Отправить изменения" /></td><td></td></tr>
+        </table>
+    </form>
+</div>
