--- a/Views/Regulations/UpdateRegulation.cshtml
+++ b/Views/Regulations/UpdateRegulation.cshtml
@@ -3,36 +3,38 @@
     ViewData["Title"] = "Редактирование записи";
     Layout = "_ValidationRegLayout";
 }
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer localizer;
 
-    <div>
-        <h3>Редактирование записи</h3>
-        <form asp-action="UpdateRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
-            <input type="hidden" asp-for="Id" value="@Model.Id" />
-            <input type="hidden" asp-for="Added" value="@DateTime.Now" />
-            <input type="hidden" asp-for="User.Email" value="@User.Identity.Name" />
+<div>
+    <h3>Редактирование записи</h3>
+    <form asp-action="UpdateRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
+        <input type="hidden" asp-for="Added" value="@DateTime.Now" />
+        <input type="hidden" asp-for="User.Email" value="@User.Identity.Name" />
 
-            <table>
-                <tr>
-                    <td>Краткое наименование нормативной документации</td>
-                    <td><input type="text" asp-for="ShortName" value="@Model.ShortName" /></td>
-                    <td><span asp-validation-for="ShortName"></span></td>
-                </tr>
-                <tr>
-                    <td>Полное наименование нормативной документации</td>
-                    <td><input type="text" asp-for="FullName" value="@Model.FullName" /></td>
-                    <td><span asp-validation-for="FullName"></span></td>
-                </tr>
-                <tr>
-                    <td>Введите ссылку на документацию</td>
-                    <td><input type="text" asp-for="Link" value="@Model.Link" /></td>
-                    <td><span asp-validation-for="Link"></span></td>
-                </tr>
-                <tr>
-                    <td>Ваш Id:</td>
-                    <td><input type="number" asp-for="UserId" value="" /></td>
-                    <td><span asp-validation-for="UserId"></span></td>
-                </tr>
-                <tr><td><input type="submit" value="Отправить изменения" /></td><td></td></tr>
-            </table>
-        </form>
-    </div>
+        <table>
+            <tr>
+                <td>Краткое наименование нормативной документации</td>
+                <td><input type="text" asp-for="ShortName" value="@Model.ShortName" /></td>
+                <td><span asp-validation-for="ShortName"></span></td>
+            </tr>
+            <tr>
+                <td>Полное наименование нормативной документации</td>
+                <td><input type="text" asp-for="FullName" value="@Model.FullName" /></td>
+                <td><span asp-validation-for="FullName"></span></td>
+            </tr>
+            <tr>
+                <td>Введите ссылку на документацию</td>
+                <td><input type="text" asp-for="Link" value="@Model.Link" /></td>
+                <td><span asp-validation-for="Link"></span></td>
+            </tr>
+            <tr>
+                <td>Ваш Id:</td>
+                <td><input type="number" asp-for="UserId" value="" /></td>
+                <td><span asp-validation-for="UserId"></span></td>
+            </tr>
+            <tr><td><input type="submit" value="Отправить изменения" /></td><td></td></tr>
+        </table>
+    </form>
+</div>
